<resources>

    <string name="action_settings">Settings</string>
    <string name="buttonSearch">Rechercher</string>
    <string name="editTextSearchDeparture">Départ</string>
    <string name="editTextSearchDestination">Destination</string>
    <string name="editTextSearchDate">Date</string>
    <string name="Toast">Erreur : il faut renseigner les lieux de Départ ET de Destination</string>
    <string name="Toast2">Votre date est le</string>
    <string name="Toast3">Votre trajet est publié</string>
    <string name="buttonItineraire">RECHERCHER UN ITINERAIRE</string>
    <string name="fleche" translatable="false">--></string>
    <string name="auth_failed">Renseignez votre email</string>
    <string name="textViewEmailUser">Votre email</string>
    <string name="textViewPasswordUser">Choix du mot de passe</string>
    <string name="buttonRegister">Inscription</string>
    <string name="textViewEmailLogin">Email utilisateur</string>
    <string name="textViewPasswordLogin">Mot de passe utilisateur</string>
    <string name="buttonLogin">Connection</string>
    <string name="textViewChoix">OU</string>
    <string name="buttonInscription">Inscription</string>
    <string name="buttonMenu">Menu</string>
    <string name="buttonCompte">Acces Compte</string>
    <string name="textViewSignUp">Inscris-toi</string>
    <string name="textViewSignIn">Déjà inscrit ? Accède à ton compte</string>
    <string name="userDisplayName">Choisir un pseudo</string>
    <string name="textViewVotreCompte">Votre compte</string>
    <string name="buttonModif">Valider les modifications</string>
    <string name="imageError">Photo non chargée</string>
    <string name="bonjourDisplay">Bonjour</string>
    <string name="welcometext">Bienvenue</string>
    <string name="SelectPicture">Select Picture</string>
    <string name="EnterEmail">Renseigne ton email</string>
    <string name="EnterPassword">Renseigne ton mot de passe</string>
    <string name="AccountAccess">Accès au compte...</string>

</resources>