<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bleupale">

    <TextView
        android:id="@+id/textViewEmailUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="104dp"
        android:text="@string/textViewEmailUser"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/textViewPasswordUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="69dp"
        android:text="@string/textViewPasswordUser"
        android:layout_below="@+id/textViewEmailUser"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/editTextPasswordUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:ems="10"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/editTextEmailUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/editTextPasswordUser"
        android:layout_alignRight="@+id/editTextPasswordUser"
        android:layout_below="@+id/textViewEmailUser"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="88dp"
        android:text="@string/buttonRegister"
        android:background="@color/colorAccent"/>

    <TextView
        android:text="@string/textViewSignIn"
        android:id="@+id/textViewSignin"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>